# buffalo

./: .gitignore  CMakeLists.txt  README.md  buffalo.mk  flight_test.py  main.py  setup.py  test
buffalo.egg-info/: PKG-INFO  SOURCES.txt
flight_log/: extract.py  read.py
include/: atmosphere.h  ch.h  config.h  fc.h  flightdata.h  state_estimation.h  status.h  vector.h
include/geometry/: mat3.h  vec3.h
lib/: engine.py  nozzle.py  throat.py
simulation/: main.py
simulation/flight_log/: README  extract.py  plot_npz.py
simulation/flight_log/2014-09-07_EARS/: README  analyse.py  extract_channel.py  log2np.py  log_00007.npz  log_00011.npz
simulation/flight_log/2014-09-14_MidlandSkies/: README  log2np.py  log_00021.npz  log_00027.npz  plot.py
simulation/flight_log/2015-02-10_BALLS/: README  log2np.py  log_00006.npz
simulation/flight_log/2016-12-04_EARS/: README  log2np.py  log_00019.npz  np2log.py
simulation/flight_log/2017-10-23_BALLS/: README.md
src/: CMakeLists.txt  atmosphere.c  buffalo.c  buffalomodule.c  config.c  fc.c  i2c.c  main.c  state_estimation.c
src/geometry/: mat3.c  vec3.c
